exposing-tcp-services/istio-ingressgateway/tcp-echo-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tcp-echo-vs
spec:
  hosts:
  - "*"
  gateways:
  - tcp-echo-gateway
  tcp:
  - match:
    - port: 31400 # istio-ingressgateway tcp port
    route:
    - destination:
        host: tcp-echo  # tcp-echo service
        port:
          number: 9000
